<resources>
    <string name="app_name">Mercury</string>
    <string name="NEW_SCHEDULE__ACTION_BAR_TITLE">Itinerario</string>
    <string name="NEW_SCHEDULE__SCHEDULE_NAME_LABEL">Nombre del itinerario</string>
    <string name="NEW_SCHEDULE__CLIENT_NAME_LABEL">Nombre</string>
    <string name="NEW_SCHEDULE__CLIENT_PHONE_NUMBER_LABEL">Número de telefono</string>
    <string name="NEW_SCHEDULE__CLIENT_LOCATION_LABEL">Ubicación</string>
    <string name="NEW_SCHEDULE__CLIENT_VISIT_DAY">Día</string>
    <string name="NEW_SCHEDULE__CLIENT_VISIT_TIME">Horario de visita</string>
    <string name="NEW_SCHEDULE__ADD_CLIENT">Agregar</string>
    <string name="NEW_SCHEDULE__ADD_CLIENT_FROM_CONTACTS">Desde contactos</string>
    <string name="NEW_SCHEDULE__SELECT_LOCATION">Seleccionar Ubicación</string>

    <string name="NEW_SCHEDULE__DELETE_VISIT">Borrar</string>
    <string name="NEW_SCHEDULE__EDIT_VISIT">Editar</string>
    <string name="NEW_SCHEDULE__SCHEDULE_NAME_VALIDATION_ERROR">Agregar nombre</string>
    <string name="NEW_SCHEDULE__CLIENT_INPUT_FIELD_VALIDATION_ERROR">No puede ser vacío</string>
    <string name="NEW_SCHEDULE__CLIENT_VISIT_DAY_VALIDATION_ERROR">Número de día inválido</string>
    <string name="NEW_SCHEDULE__CLIENT_VISIT_TIME_VALIDATION_ERROR">Formato inválido de fecha</string>

    <string name="NOTIFICATION_CHANNEL_DESCRIPTION">Para el envio de itinerarios</string>

    <string name="LIST_SCHEDULE__EMPTY_SCHEDULES">No hay itinerarios creados :(</string>
    <string name="LIST_SCHEDULE__ACTION_BAR_TITLE">Mercury</string>
    <plurals name="LIST_SCHEDULE__SCHEDULE_DURATION">
        <item quantity="one">%d día</item>
        <item quantity="other">%d días</item>
    </plurals>
    <string name="LIST_SCHEDULE__SCHEDULE_ACTIVE">Activo</string>
    <string name="LIST_SCHEDULE__SCHEDULE_INACTIVE">Inactivo</string>
    <string name="LIST_SCHEDULE__SCHEDULE_DELETION_MODAL__MESSAGE">¿Estás seguro de que querés eliminar el itinerario? No vas a poder recuperarlo</string>
    <string name="LIST_SCHEDULE__SCHEDULE_DELETION_MODAL__CONFIRMATION_BUTTON">Eliminar</string>
    <string name="LIST_SCHEDULE__SCHEDULE_MODAL__CANCEL_BUTTON">Cancelar</string>
    <string name="LIST_SCHEDULE__SCHEDULE_START_DATE_PICKER_MODAL__TITLE">¿Cuándo querés iniciar el itinerario?</string>
    <string name="LIST_SCHEDULE__SCHEDULE_START_DATE_PICKER_MODAL__CONFIRMATION_BUTTON">Confirmar</string>
    <string name="LIST_SCHEDULE__SCHEDULE_START_DATE_PICKER_MODAL__CANCEL_BUTTON">Cancelar</string>
    <string name="LIST_SCHEDULE__SCHEDULE_DISABLE_MODAL__MESSAGE">¿Estás seguro de que querés deshabilitar el itinerario? Se borrarán todos los eventos futuros</string>
    <string name="LIST_SCHEDULE__SCHEDULE_DISABLE_MODAL__CONFIRMATION_BUTTON">Deshabilitar</string>

    <string name="SCHEDULE_DETAILS__EMPTY_SCHEDULES">Este itinerario no tiene clientes para visitar :(</string>
    <string name="NEXT_VISITS">Proximas visitas</string>
    <string name="WIDGET__EMPTY_VISITS">No hay visitas proximamente :(</string>
    <string name="SCHEDULE_DETAILS__SCHEDULE_DAY_NUMBER">Día %1$s</string>
    <string name="import_schedules">Importar Itinerarios</string>
</resources>
