<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ScheduleEditionFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/schedule_name"
            android:textStyle="bold"
            android:text="@string/NEW_SCHEDULE__SCHEDULE_NAME_LABEL"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/schedule_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textNoSuggestions" />

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18dp"
                    android:labelFor="@+id/client_name"
                    android:text="@string/NEW_SCHEDULE__CLIENT_NAME_LABEL" />

                <EditText
                    android:id="@+id/client_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textNoSuggestions" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18dp"
                    android:labelFor="@+id/client_phone_number"
                    android:text="@string/NEW_SCHEDULE__CLIENT_PHONE_NUMBER_LABEL" />

                <EditText
                    android:id="@+id/client_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/pickAContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NEW_SCHEDULE__ADD_CLIENT_FROM_CONTACTS" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18dp"
                    android:labelFor="@+id/client_location"
                    android:text="@string/NEW_SCHEDULE__CLIENT_LOCATION_LABEL" />

                <EditText
                    android:id="@+id/client_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textNoSuggestions" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:labelFor="@+id/client_visit_time"
                    android:text="@string/NEW_SCHEDULE__CLIENT_VISIT_TIME" />

                <TextView
                    android:id="@+id/client_visit_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="45dp"
                    android:gravity="top"
                    android:textStyle="bold"
                    tools:text="00:00" />



                <Button
                    android:id="@+id/addClientToScheduleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NEW_SCHEDULE__ADD_CLIENT" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/visit_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layoutManager="LinearLayoutManager" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/checkbox_on_background" />

    </LinearLayout>
</ScrollView>